# trade-discovery

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TEMPORARY-TASK-LIST.md  docker-compose.test.yml  jest.config.cjs  package.json  pyproject.toml  requirements.txt
.github/scripts/: jest.config.cjs  package.json
.github/scripts/sync/: dag.js
.github/scripts/tests/: dag.test.js  github-events.test.js  workflow-validation.test.js
.github/workflows/: project-v2-trigger.yml  sync-local-to-project.yml  sync-project-to-local.yml  test-project-v2-events.yml  validate-workflows.sh
.project/docs/: ai_integration.md  customization.md  setup.md  workflow.md
.project/scripts/: github_setup.ps1  setup.ps1  update_status.ps1
.project/status/: DEVELOPMENT_STATUS.yaml
app/: main.py
app/api/: routes.py
app/config/: settings.py
app/db/: database.py
app/models/: asset_pool.py  historical_performance.py  opportunities.py
app/services/: analysis.py  discovery.py  market_data.py
docs/: airflow-integration-guide.md  airflow-integration-implementation-plan.md  trade-discovery.md
scripts/: init_db.py
src/api/: app.py
src/trade_discovery/: __init__.py  main.py
src/trade_discovery/api/: app.py  routes.py
src/trade_discovery/db/: database.py
src/trade_discovery/models/: __init__.py  base.py  (+2 more)
tests/infrastructure/: Dockerfile  dag.js  dag.test.js  github.js  github.test.js  index.js  index.test.js  jest.setup.js  logger.js  logger.test.js  package.json  task-decomposition.js  task-decomposition.test.js  test.yaml  yaml.js  yaml.test.js
(+9 files in other folders)
